Reorganize project structure - move Java files to src/
- Moved all .java files to src/ directory for standard Java project structure
- Updated run.sh script to compile from src/ directory
- Updated README.md with correct compilation commands
- Maintained VS Code compatibility

changes